--- a/express-sprint/src/App.css
+++ b/express-sprint/src/App.css
@@ -1,33 +1,15 @@
 .App {
-  text-align: center;
+  margin: 40px auto;
+  width: 800px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+p {
+  font-size: 2rem;
+  color: black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.action {
+  border: 1px solid black;
+  width: 400px;
+  margin: 20px auto;
 }
